Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/Acct_Tax_Exemption_Status__c.field-meta.xml
<CustomField>
    <fullName>Acct_Tax_Exemption_Status__c</fullName>
    <formula>Account.B2B_Is_Currently_Tax_Exempt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acct Tax Exemption Status</label>
    <type>Checkbox</type>
</CustomField>