Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/B2B_Shipping_Estimated_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Estimated_Date__c</fullName>
    <label>B2B Shipping Estimated Date</label>
    <type>Date</type>
</CustomField>