Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/B2B_Shipping_Provider__c.field-meta.xml
<CustomField>
    <fullName>B2B_Shipping_Provider__c</fullName>
    <label>B2B Shipping Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>