Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/B2B_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscriptions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2B Subscriptions</label>
    <referenceTo>B2B_Subscriptions__c</referenceTo>
    <relationshipLabel>Order Summaries</relationshipLabel>
    <relationshipName>Order_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>