Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>IF(
    ISBLANK(PoNumber),
    &quot;Prepaid&quot;,
    IF(
        ISBLANK(B2B_Is_PO_Attachment_Exist__c),
        &quot;PO&quot;,
        &quot;PO (No Attachment)&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>