Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/SAP_Cust__c.field-meta.xml
<CustomField>
    <fullName>SAP_Cust__c</fullName>
    <formula>Account.PKI_SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Payer/Bill-to #</label>
    <type>Text</type>
</CustomField>