Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/SAP_Ship_to__c.field-meta.xml
<CustomField>
    <fullName>SAP_Ship_to__c</fullName>
    <label>SAP Ship-to #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>