Perkin-UAT/force-app/main/default/objects/OrderSummary/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Phone #</label>
    <type>Text</type>
</CustomField>