Perkin-UAT/force-app/main/default/objects/OrderSummary/listViews/Commerce_Order_Summaries.listView-meta.xml
<ListView>
    <fullName>Commerce_Order_Summaries</fullName>
    <columns>Name</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>SAP_Order__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>GrandTotalAmount</columns>
    <columns>B2B_Ship_To_Country__c</columns>
    <columns>LastModifiedBy</columns>
    <columns>LastModifiedDate</columns>
    <columns>B2B_Special_Instruction__c</columns>
    <filterScope>Everything</filterScope>
    <label>Commerce Order Summaries</label>
</ListView>