Perkin-UAT/force-app/main/default/objects/OrderSummary/listViews/Commerce_Order_Summaries_Processing.listView-meta.xml
<ListView>
    <fullName>Commerce_Order_Summaries_Processing</fullName>
    <columns>Name</columns>
    <columns>OrderedDate</columns>
    <columns>Status</columns>
    <columns>Account</columns>
    <columns>SAP_Order__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>GrandTotalAmount</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Processing</value>
    </filters>
    <label>Commerce Order Summaries - Processing</label>
</ListView>